--- a/ot_imaging_analysis/param_conf.ini
+++ b/ot_imaging_analysis/param_conf.ini
@@ -1,4 +1,4 @@
 [main]
-data_path = /Volumes/Shared/experiments/E0070_receptive_field/v04_flashing_rad_simple
-fig_path = /Users/luigipetrucco/Desktop/xiao_et_al_suppl
+data_path = \\FUNES\Shared\experiments\E0070_receptive_field\v04_flashing_rad_simple
+fig_path = \\FUNES\Shared\experiments\E0070_receptive_field\figures
 rel_score_thr = 0.5
