--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pandas
-numpy
-matplotlib
-bouter
-flammkuchen
+pandas==1.4.0
+numpy==1.21.5
+matplotlib==3.5.1
+bouter==0.1.3
+flammkuchen==0.9.2
 svgpath2mpl
-numba
-seaborn
-openpyxl
-tqdm
+numba==0.55.0
+seaborn==0.11.2
+openpyxl==3.0.9
+tqdm==4.62.3
+scipy==1.7.3
