pytest-cov addition

--- a/param_conf.ini
+++ b/param_conf.ini
@@ -1,2 +1,2 @@
 [main]
-data_path = /Users/luigipetrucco/Desktop/xiao_et_al_data_to_upload
+data_path = \\FUNES\Shared\papers\paper_oligodendrocites\xiao_et_al_test_dataset_test
