demo dataset by default

--- a/param_conf.ini
+++ b/param_conf.ini
@@ -1,2 +1,2 @@
 [main]
-data_path = \\FUNES\Shared\papers\paper_oligodendrocites\xiao_et_al_test_dataset_test
+data_path = //put/here/path/to/dataset
