--- a/.gitignore
+++ b/.gitignore
@@ -144,13 +144,6 @@ notebooks_julia/Manifest.toml
 .idea/
 
 #outputs of analyses
-*.pdf
-*.svg
-*.csv
-*.xls
-*stim_pos.h5
-*cell_df.h5
-*pooled_dfs.h5
-*gaussian_fit.h5
+.xiao_et_al_demo_dataset/
 
 
