--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,24 @@ name: tests
 on: push
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          echo "testing: ${{github.ref}}"
+          python -m pip install --upgrade pip setuptools wheel
+          pip install .[dev]
+      - name: Lint
+        run: |
+          black . --check
+          isort . --check
+          flake8
   test:
     runs-on: ubuntu-latest
     steps:
@@ -14,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          pip install .[dev] -e
       - name: Preprocess test
         run: |
           pytest
