--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           echo "testing: ${{github.ref}}"
-          python -m pip install --upgrade pip setuptools wheel
-          pip install .[dev]
+          pip install -r /path/to/requirements_dev.txt
       - name: Lint
         run: |
           black . --check
@@ -32,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev] -e
+          pip install -e .[dev]
       - name: Preprocess test
         run: |
           pytest
