--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           echo "testing: ${{github.ref}}"
-          pip install -r /path/to/requirements_dev.txt
+          pip install -r requirements_dev.txt
       - name: Lint
         run: |
           black . --check
@@ -31,10 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[dev]
-      - name: Preprocess test
-        run: |
-          pytest
+          pip install .[dev]
       - name: Test
         run: |
           pytest --cov
