--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ numpy==1.21.5
 matplotlib==3.5.1
 bouter==0.1.3
 flammkuchen==0.9.2
-svgpath2mpl
+svgpath2mpl==1.0.0
 numba==0.55.0
 seaborn==0.11.2
 openpyxl==3.0.9
 tqdm==4.62.3
 scipy==1.7.3
+tables==3.7.0
