--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,8 @@
-pytest
-pytest-cov
-pytest-console-scripts
-coverage
-black
-flake8
-isort
+pytest==6.2.5
+pytest-cov==3.0.0
+pytest-console-scripts==1.2.2
+coverage==6.2
+black==21.12b0
+flake8==4.0.1
+isort==5.10.1
+toml==0.10.2
